# Fraud_Detection_System

./: .env.example  .gitignore  Dockerfile.frontend  README.md  docker-compose.yml  populate_db.py  pyproject.toml  requirements.txt
app/: auth.py  database.py  dependencies.py  fraud_detection.py  main.py  models.py  schemas.py
app/ML/: model.pkl  models.py  train_model.py
app/routers/: auth.py  claims.py  transactions.py  user_route.py
app/services/: fraud_services.py
frontend/: api.py  app.py
frontend/pages/: claims.py  dashboard.py  login.py  transactions.py
notebooks/: eda.ipynb
scripts/: monitor.py  retrain.py
tests/: conftest.py  test_auth.py  test_claims.py  test_fraud_services.py  test_transactions.py  test_users.py
